# edubook-backend

./: .gitignore  README.md  example.env  image.py  main.py  makeImage.py  model.py  ocr.py  pyproject.toml  summarize.py
util/: valid.py
